# outputxml2postgres

./: .env  .gitignore  README.md  docker-compose.yaml  grafana_dashboard.json  output2postgres.py  pyproject.toml
